--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "weather1sv",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Weather API Backend",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "test": "node test-api.js"
   },
-  "keywords": [],
+  "keywords": [
+    "weather",
+    "api",
+    "express",
+    "openweathermap"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
@@ -14,6 +21,9 @@
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
-    "express": "^5.1.0"
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
