--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "node test-api.js"
+    "test": "node test-api.js",
+    "test:auth": "node test-auth.js"
   },
   "keywords": [
     "weather",
@@ -19,9 +20,13 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.10.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.14.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
