--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^17.0.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "multer": "^1.4.5-lts.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "rss-parser": "^3.13.0",
